exports[`test Alert matches snapshot with error 1`] = `
<div
  className="Alert Error"
  onClick={undefined}>
  error message
</div>
`;

exports[`test Alert matches snapshot with success notification 1`] = `
<div
  className="Alert Success"
  onClick={undefined}>
  error message
</div>
`;

exports[`test Alerts match snapshot 1`] = `
<div
  className="Alerts">
  <Connect(Component)
    id="1" />
</div>
`;
